// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LeadCard > Rendezira LeadCard com status 0 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div />
    <div />
    <div>
      <div
        class="_card_4caed2"
      >
        <div
          class="_header_containers_4caed2"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-18k2bs-MuiAvatar-root"
          >
            J
          </div>
          <div
            class="_header_4caed2"
          >
            <span
              class="_name_4caed2"
            >
              John
            </span>
            <span
              class="_category_4caed2"
            >
              Real Estate
            </span>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-hv6zls-MuiDivider-root"
        />
        <div
          class="_details_4caed2"
        >
          <p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="CalendarTodayIcon"
              focusable="false"
              style="margin-right: 6px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 18H4V8h16z"
              />
            </svg>
            01/10/2023 07:00
          </p>
          <p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="LocationOnIcon"
              focusable="false"
              style="margin-right: 6px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7m0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5"
              />
            </svg>
             
            New York
          </p>
          <p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="NumbersIcon"
              focusable="false"
              style="margin-right: 6px;"
              viewBox="0 0 24 24"
            >
              <path
                d="m20.5 10 .5-2h-4l1-4h-2l-1 4h-4l1-4h-2L9 8H5l-.5 2h4l-1 4h-4L3 16h4l-1 4h2l1-4h4l-1 4h2l1-4h4l.5-2h-4l1-4zm-7 4h-4l1-4h4z"
              />
            </svg>
            1
          </p>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-180woc-MuiDivider-root"
        />
        <p>
          Looking for a 2-bedroom apartment in downtown.
        </p>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-180woc-MuiDivider-root"
        />
        <div
          class="_last_line_4caed2"
        >
          <div
            class="_price_4caed2"
          >
             R$ 
            2500.00
          </div>
          <div
            class="_actions_4caed2"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedInfo MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorInfo MuiButton-root MuiButton-contained MuiButton-containedInfo MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorInfo _button_4caed2 _accept_4caed2 css-mnflth-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Accept
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedWarning MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorWarning MuiButton-root MuiButton-contained MuiButton-containedWarning MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorWarning _button_4caed2 _decline_4caed2 css-14169-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Decline
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_card_4caed2"
    >
      <div
        class="_header_containers_4caed2"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-18k2bs-MuiAvatar-root"
        >
          J
        </div>
        <div
          class="_header_4caed2"
        >
          <span
            class="_name_4caed2"
          >
            John
          </span>
          <span
            class="_category_4caed2"
          >
            Real Estate
          </span>
        </div>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-hv6zls-MuiDivider-root"
      />
      <div
        class="_details_4caed2"
      >
        <p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="CalendarTodayIcon"
            focusable="false"
            style="margin-right: 6px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 18H4V8h16z"
            />
          </svg>
          01/10/2023 07:00
        </p>
        <p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="LocationOnIcon"
            focusable="false"
            style="margin-right: 6px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7m0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5"
            />
          </svg>
           
          New York
        </p>
        <p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="NumbersIcon"
            focusable="false"
            style="margin-right: 6px;"
            viewBox="0 0 24 24"
          >
            <path
              d="m20.5 10 .5-2h-4l1-4h-2l-1 4h-4l1-4h-2L9 8H5l-.5 2h4l-1 4h-4L3 16h4l-1 4h2l1-4h4l-1 4h2l1-4h4l.5-2h-4l1-4zm-7 4h-4l1-4h4z"
            />
          </svg>
          1
        </p>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-180woc-MuiDivider-root"
      />
      <p>
        Looking for a 2-bedroom apartment in downtown.
      </p>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-180woc-MuiDivider-root"
      />
      <div
        class="_last_line_4caed2"
      >
        <div
          class="_price_4caed2"
        >
           R$ 
          2500.00
        </div>
        <div
          class="_actions_4caed2"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedInfo MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorInfo MuiButton-root MuiButton-contained MuiButton-containedInfo MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorInfo _button_4caed2 _accept_4caed2 css-mnflth-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Accept
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedWarning MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorWarning MuiButton-root MuiButton-contained MuiButton-containedWarning MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorWarning _button_4caed2 _decline_4caed2 css-14169-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Decline
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`LeadCard > Rendezira LeadCard com status 1 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div />
    <div />
    <div />
    <div>
      <div
        class="_card_4caed2"
      >
        <div
          class="_header_containers_4caed2"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-18k2bs-MuiAvatar-root"
          >
            J
          </div>
          <div
            class="_header_4caed2"
          >
            <span
              class="_name_4caed2"
            >
              John Doe
            </span>
            <span
              class="_category_4caed2"
            >
              Real Estate
            </span>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-hv6zls-MuiDivider-root"
        />
        <div
          class="_details_4caed2"
        >
          <p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="CalendarTodayIcon"
              focusable="false"
              style="margin-right: 6px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 18H4V8h16z"
              />
            </svg>
            01/10/2023 07:00
          </p>
          <p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="LocationOnIcon"
              focusable="false"
              style="margin-right: 6px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7m0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5"
              />
            </svg>
             
            New York
          </p>
          <p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="NumbersIcon"
              focusable="false"
              style="margin-right: 6px;"
              viewBox="0 0 24 24"
            >
              <path
                d="m20.5 10 .5-2h-4l1-4h-2l-1 4h-4l1-4h-2L9 8H5l-.5 2h4l-1 4h-4L3 16h4l-1 4h2l1-4h4l-1 4h2l1-4h4l.5-2h-4l1-4zm-7 4h-4l1-4h4z"
              />
            </svg>
            1
          </p>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-180woc-MuiDivider-root"
        />
        <div
          class="_additional_details_4caed2"
        >
          <p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="PhoneIcon"
              focusable="false"
              style="margin-right: 6px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02z"
              />
            </svg>
             
            123456789
          </p>
          <p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="EmailIcon"
              focusable="false"
              style="margin-right: 6px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4-8 5-8-5V6l8 5 8-5z"
              />
            </svg>
            eareis@gmail.com
          </p>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-180woc-MuiDivider-root"
        />
        <p>
          Looking for a 2-bedroom apartment in downtown.
        </p>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-180woc-MuiDivider-root"
        />
        <div
          class="_last_line_4caed2"
        >
          <div
            class="_price_4caed2"
          >
             R$ 
            2500.00
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_card_4caed2"
    >
      <div
        class="_header_containers_4caed2"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-18k2bs-MuiAvatar-root"
        >
          J
        </div>
        <div
          class="_header_4caed2"
        >
          <span
            class="_name_4caed2"
          >
            John Doe
          </span>
          <span
            class="_category_4caed2"
          >
            Real Estate
          </span>
        </div>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-hv6zls-MuiDivider-root"
      />
      <div
        class="_details_4caed2"
      >
        <p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="CalendarTodayIcon"
            focusable="false"
            style="margin-right: 6px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 18H4V8h16z"
            />
          </svg>
          01/10/2023 07:00
        </p>
        <p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="LocationOnIcon"
            focusable="false"
            style="margin-right: 6px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7m0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5"
            />
          </svg>
           
          New York
        </p>
        <p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="NumbersIcon"
            focusable="false"
            style="margin-right: 6px;"
            viewBox="0 0 24 24"
          >
            <path
              d="m20.5 10 .5-2h-4l1-4h-2l-1 4h-4l1-4h-2L9 8H5l-.5 2h4l-1 4h-4L3 16h4l-1 4h2l1-4h4l-1 4h2l1-4h4l.5-2h-4l1-4zm-7 4h-4l1-4h4z"
            />
          </svg>
          1
        </p>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-180woc-MuiDivider-root"
      />
      <div
        class="_additional_details_4caed2"
      >
        <p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="PhoneIcon"
            focusable="false"
            style="margin-right: 6px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02z"
            />
          </svg>
           
          123456789
        </p>
        <p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="EmailIcon"
            focusable="false"
            style="margin-right: 6px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4-8 5-8-5V6l8 5 8-5z"
            />
          </svg>
          eareis@gmail.com
        </p>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-180woc-MuiDivider-root"
      />
      <p>
        Looking for a 2-bedroom apartment in downtown.
      </p>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-180woc-MuiDivider-root"
      />
      <div
        class="_last_line_4caed2"
      >
        <div
          class="_price_4caed2"
        >
           R$ 
          2500.00
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
